<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.SplashTwoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:src="@mipmap/logo_white" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:scaleType="fitEnd"
            android:src="@mipmap/splash_visual">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center_horizontal|top"
                    android:text="@string/control_sch"
                    android:textAppearance="@style/control_sch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center_horizontal|top"
                    android:text="your"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_horizontal|top"
                android:text="@string/control_sch_text"
                android:textColor="@color/colorText"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/create_account"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_login_btn"
                android:text="@string/create_account"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:gravity="center_horizontal|top"
                android:text="@string/already_member"
                android:textColor="@color/colorTextLight"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center_horizontal|top"
                android:text="@string/sign_in"
                android:textColor="@color/themeColor"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>