<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.SplashTwoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_horizontal|top"
            android:text="@string/create_profile"
            android:textColor="@color/colorText"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/coloretTexT_Botttom"
            android:fontFamily="@font/inter_regular"
            android:hint="Choose your country"
            android:gravity="center_vertical"
            android:paddingRight="20dp"
            android:drawableEnd="@mipmap/down_arrow"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:background="@color/coloretTexT_Botttom"
            android:layout_height="1dp">

        </View>

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/coloretTexT_Botttom"
            android:fontFamily="@font/inter_regular"
            android:hint="Phone Number"
            android:gravity="center_vertical"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="16sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/create_account"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_login_btn"
                android:text="@string/cuontinue"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:gravity="center_horizontal|top"
                android:text="@string/already_member"
                android:textColor="@color/colorTextLight"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center_horizontal|top"
                android:text="@string/sign_in"
                android:textColor="@color/themeColor"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>