<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgotPassword"
            android:textColor="#000000"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:maxLength="16"
            android:background="@drawable/bg_login_edittext"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            android:text="@string/pass_msg"
            android:textColor="#000000"
            android:textSize="10sp"
            />


        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_login_edittext"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="10dp"
            android:maxLength="16"
            android:hint="Confirm Password"
            android:padding="15dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/bg_login_btn"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/bg_login_btn"
                android:text="Submit"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>